# fastapi-todo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  poetry add script.sh  pyproject.toml
app/: main.py
app/api/v1/: routes.py
app/auth/: controller.py  model.py  service.py
app/core/: exceptions.py  logging.py
app/db/: core.py
app/models/: todo.py  user.py
app/todos/: controller.py  model.py  service.py
app/users/: controller.py  model.py  service.py
tests/: conftest.py  test_auth_service.py  test_todos_service.py  test_users_service.py
tests/e2e/: test_auth_endpoints.py  test_todos_endpoints.py  test_users_endpoints.py
